test/Tests/Interface/MissingInput.golden

test\Tests\Interface\MissingInput.hs:54:5: error:
    * Input "in2" of type V 4 Float of Fragment shader named "main",
      does not match any output of Vertex shader named "main".
    * In the expression:
        ShaderPipeline
          $ StructInput @VertexInput @(Triangle List)
              :>-> (vertex, "vertex.spv")
              :>-> (fragment, "fragment.spv")
      In an equation for `shaderPipeline':
          shaderPipeline
            = ShaderPipeline
                $ StructInput @VertexInput @(Triangle List)
                    :>-> (vertex, "vertex.spv")
                    :>-> (fragment, "fragment.spv")
   |
54 |   = ShaderPipeline
   |     ^^^^^^^^^^^^^^^...
